Fix: Add align content to who section on home page for sizex 2560px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -492,3 +492,9 @@ img {
     }
 
 }
+@media screen and (min-width: 2560px) {
+
+#who { 
+align-content:center;
+}
+}
